--- a/Image_and_Script/simple_analysis.ipynb
+++ b/Image_and_Script/simple_analysis.ipynb
@@ -145,6 +145,7 @@
    "cell_type": "markdown",
    "id": "d6f5a3ab-8c06-4616-8f1c-3a3f7d56bff5",
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -174,9 +175,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:Ryan_2]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-Ryan_2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -188,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
