--- a/Image_and_Script/simple_analysis.ipynb
+++ b/Image_and_Script/simple_analysis.ipynb
@@ -1,8 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "73facf6c-ab3a-4dc1-8d01-bd2646b4cdb5",
+   "cell_type": "raw",
+   "id": "b454e9b9-5e92-47a3-a350-b400c0fd4b11",
    "metadata": {},
    "source": [
     "# Simple image Analysis \n",
@@ -26,19 +26,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "68b7f54b-5bed-4983-9638-cadf2e95286a",
+   "cell_type": "raw",
+   "id": "c2097c06-d5de-400d-b958-c44e6365300f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "import tifffile as tf\n",
     "import skimage\n",
     "import pandas as pd \n",
     "import os \n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import data_pipeline_api as pipeline"
    ]
   },
   {
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "e5757b3f-2f41-4a90-95be-6eeba562d18d",
    "metadata": {
     "tags": []
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "f8d5e4f1-30e2-4888-864f-6958894ed3ac",
    "metadata": {
     "tags": []
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "fcba576f-a741-4116-838a-4a9c88b11c10",
    "metadata": {
     "tags": []
@@ -130,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "4ad7c01e-7d2b-4021-b2f2-a35bac65587e",
    "metadata": {
     "tags": []
@@ -145,6 +144,7 @@
    "cell_type": "markdown",
    "id": "d6f5a3ab-8c06-4616-8f1c-3a3f7d56bff5",
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "37df33d2-bcc7-483a-9253-7853b77ec59f",
    "metadata": {
     "tags": []
@@ -174,9 +174,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:Ryan_2]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-Ryan_2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -188,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
