--- a/Image_and_Script/simple_analysis.ipynb
+++ b/Image_and_Script/simple_analysis.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "e5757b3f-2f41-4a90-95be-6eeba562d18d",
    "metadata": {
     "tags": []
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "f8d5e4f1-30e2-4888-864f-6958894ed3ac",
    "metadata": {
     "tags": []
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "fcba576f-a741-4116-838a-4a9c88b11c10",
    "metadata": {
     "tags": []
@@ -145,6 +145,7 @@
    "cell_type": "markdown",
    "id": "d6f5a3ab-8c06-4616-8f1c-3a3f7d56bff5",
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -174,9 +175,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:Ryan_2]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-Ryan_2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -188,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
